kubernetes/apps/default/whisper/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whisper
  namespace: default
  labels:
    app: whisper
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: whisper
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 200%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: whisper
    spec:
      containers:
        - name: whisper
          image: didmar/whisper-api-server:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1000m
              memory: 2Gi
            limits:
              cpu: 4000m
              memory: 8Gi
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: model-cache
              mountPath: /root/.cache/huggingface
      volumes:
        - name: model-cache
          emptyDir:
            sizeLimit: 5Gi
      restartPolicy: Always
