kubernetes/apps/default/whisper/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whisper-server
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: external.enchantednatures.com
    external-dns/is-public: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: external
  rules:
    - host: &host whisper.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whisper-server
                port:
                  number: 8000
  tls:
    - hosts:
        - *host
      secretName: whisper-tls
